2008-09-06  Dafydd Crosby <dcrosby@userful.com>

	* ppdtoxml: Can now add extra drivers to XML more easily.

2008-09-03  Tim Waugh <twaugh@redhat.com>

	* acinclude.m4: Fixed underquoted definitions.

2008-09-02  Tim Waugh <twaugh@redhat.com>

	* lib/Foomatic/DB.pm: Prevent busy loop when trying to shorten
	PPD nicknames like "HP OfficeJet LX
	Foomatic/gutenprint-ijs-simplified.5.0".

2008-08-18  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Use "Oki" instead of "Okidata" when
	  cleaning manufacturer names.

2008-07-01  Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Added on-disk cache functionality for the
	  database overview Perl structure. To activate this functionality
	  one does simply "use Foomatic::DB; my $db = new Foomatic::DB;
	  $db->{'overviewfile'} = "<filename>";". The CGI scripts of the
	  OpenPrinting web site generate overviews very frequently, so
	  this should reduce the server load a lot.

2008-06-25  Dafydd Crosby <dcrosby@userful.com>

	* PPDtoXML: Now adds the <drivers> tag, inserting the preferred 
	  driver automatically. The next release will allow the insertion
	  of extra driver entries.

2008-06-25  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-combo-xml.c: Allow XML files with header lines ("<? ... ?>",
	  "<! ... >") in the beginning. Everything which is before the main
	  tag of each file ("<printer>" for printer entries, "<driver>" for
	  driver entries, and "<option>" for option entries) gets removed
	  now.

2008-06-18  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-perl-data.c: Added support for output of both translated
	  and original (English) license text and for links to external
	  license text files.

2008-06-06  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-preferred-driver.in: Skip printers without printer
	  XML entry, to avoid that empty printer XML files get generated.

	* foomatic-compiledb.in: Simplify the generation of the list of