@@ -1,3 +1,9 @@
+2008-10-02  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* lib/Foomatic/DB.pm: Changed method to find all printers
+	  supported by a given driver, so that printer/driver relations
+	  can also be defined by a <drivers> section in the printer entry.
+
 2008-09-06  Dafydd Crosby <dcrosby@userful.com>
 
 	* ppdtoxml: Can now add extra drivers to XML more easily.
